# deepseek-cli

./: README.en.md  README.md  clean_pycache.sh  pyproject.toml  requirements.txt
deepseek_cli/: __main__.py  main.py
deepseek_cli/chat/: chat.py
deepseek_cli/core/: banner.py  completer.py  config.py  consent.py  ui.py
deepseek_cli/features/chat/: chat.py
deepseek_cli/features/io/: fs.py  shell.py
deepseek_cli/tool/: fs.py
